# feto-live

./: .gitignore  docker-compose.yml  prd.md  render.yaml
backend/: .env.example  Dockerfile  package-lock.json  package.json  railway.json
backend/src/: config.ts  index.ts
backend/src/cache/: cache-service.ts  redis.ts
backend/src/db/: seed.ts
backend/src/keeper/: config.ts  engine.ts  index.ts  market-matcher.ts  metrics-server.ts  proof-fetcher.ts  settlement.ts  setup-keypair.ts  types.ts  ws-listener.ts
backend/src/middleware/: auth.ts  error-handler.ts  rate-limit.ts
backend/src/monitoring/: sentry.ts
backend/src/routes/: bets.ts  demo.ts  health.ts  markets.ts  matches.ts  users.ts
backend/src/services/: betting.service.ts  market.service.ts  match.service.ts  solana.service.ts  user.service.ts
backend/src/txline/: client.ts  types.ts
backend/src/utils/: constants.ts  logger.ts
backend/src/ws/: server.ts
feto/: .gitignore  Anchor.toml  Cargo.toml
feto/programs/feto-escrow/: Cargo.toml
feto/programs/feto-escrow/src/: lib.rs
feto/programs/feto-factory/: Cargo.toml
feto/programs/feto-factory/src/: lib.rs
feto/programs/feto-settle/: Cargo.toml
feto/programs/feto-settle/src/: lib.rs
feto/scripts/: deploy-devnet.sh
feto/tests/: feto.ts
frontend/: .env.example  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
plan/: EPIC-01_Smart-Contracts.md  EPIC-02_Frontend.md  EPIC-03_Backend-API.md  EPIC-04_Keeper-Bot.md  EPIC-05_Infrastructure-Deployment.md  EPIC-06_Testing-QA.md  IMPLEMENTATION_PLAN.md
scripts/: demo-readiness.sh  deploy-backend-railway.sh  deploy-frontend.sh  deploy-to-render.sh  setup-monitoring.sh
(+12 files in other folders)
